Hands on part 1 done

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 HandsOn/Group00/csv/Certificats_d_efici_ncia_energ_tica_d_edificis.csv
+HandsOn/Group00/requirements/datasetRequirements.xlsx
